Fix eventwatch failure not propogating, and losing sequence Futures
Needs better testing around what happens when the register fails, ideally.

Conflicts:

	lib/Net/Async/CassandraCQL.pm

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-Async-CassandraCQL
 
+0.11_1  2015/01/25 14:00:00
+        [BUGFIXES]
+         * Fix eventwatch failure not propogating, and losing sequence Futures
+
 0.11    2014/06/01 12:35:56
         [CHANGES]
          * Optionally use LZ4 compression when using CQLv2
