--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Net-Async-CassandraCQL
 
 0.11_4  2015/02/06 13:00:00
         [CHANGES]
-         * Build 11_* chain on top of real repository
+         * Support service/port configuration per host.
 
 0.11_3  2015/01/28 18:00:00
         [BUGFIXES]
