Fix queries hanging on current node close.
Discussed the option of putting an on_closed wrapper in Connection::configure,
but the order of when we fail queries versus other actions, like connecting a new primary, is important.
So leaving it to the consumer to call on_closed if they override it.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Net-Async-CassandraCQL
 
+0.12    2015/02/12 16:00:00
+        [BUGFIXES]
+         * Fix queries hanging on current node close.
+
 0.11_4  2015/02/06 13:00:00
         [CHANGES]
          * Support service/port configuration per host.
